# rwanda-ai-curriculum-rag

./: .gitignore  README.md  UREADME.md  pyproject.toml
backend/: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  main.py  pyproject.toml  pytest.ini  quick_fix.py
backend/app/: README.md  logger.py  main.py
backend/app/api/: README.md  __init__.py  middleware.py
backend/app/config/: README.md  constants.py  secrets.py  settings.py
backend/app/core/: config.py  logging.py  service_registry.py  utils.py
backend/app/data_loader/: README.md  api_loader.py  base.py  file_loader.py  nosql_db.py  pdf_loader.py  relational_db.py  utils.py
backend/app/dataset_builder/: qna_generator.py  quiz_generator.py
backend/app/db/: chromadb.py
backend/app/embeddings/: README.md  create_embeddings.py  utils.py  vector_store.py
backend/app/ingestions/: index_builder.py  pdf_loader.py  text_chunker.py
backend/app/models/: README.md  base_llm.py  fine_tune.py  llm_inference.py  pipelines.py  utils.py
backend/app/prompts/: README.md  learning_prompts.py  quiz_prompts.py  translation_prompts.py  utils.py
backend/app/schemas/: admin.py  base.py  chat.py  search.py
backend/app/services/: README.md  fallback.py  memory.py  rag.py  response.py
backend/app/sevices/: rag-service.py
backend/app/tests/: __init__.py  configtest.py  test_chat.py  test_ingestion.py
backend/tests/: README.md  test_data_loader.py  test_embeddings.py  test_models.py  test_rag.py  test_response.py
backend/utils/: README.md  evaluation.py  helper_functions.py  text_utils.py
(+21 files in other folders)
