[project]
name = "rwanda-ai-curriculum-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "httpx>=0.28.1",
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
